# praiseforcoder

./: .env  .env.template  .gitignore  LICENSE  README.md  fastmcp_praise.py  how-to.md  main.py  mcp.example.json  mcp_praise.py  pyproject.toml  requirements.txt  simple_praise_service.py  test_mcp_praise.py
praise-service/: main.py  pyproject.toml
praise-service/praise_service.egg-info/: PKG-INFO
praise_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
resources/: Building MCP with LLMs.md
v1.0.0/praise_service.egg-info/: SOURCES.txt
