[project]
name = "praise-service"
version = "0.1.0"
description = "MCP service for generating praise using DeepSeek API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
]

[tool.mcp]
name = "Praise Bot"
description = "A service that generates praise using DeepSeek API"
version = "0.1.0"
server = "main:mcp"
